Separate agent logic out of chat session